src/objects/Relationship__c.object
<CustomObject>
    <description>used to join contacts to contacts, and describe the link between them</description>
    <fields>
        <fullName>Relation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>the relation side of the relationship being described</description>
        <label>Relation</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Relationships</relationshipLabel>
        <relationshipName>Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <description>Type of relationship being described</description>
        <label>Relationship Type</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <description>the student side of the relationship being described</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Relationship</label>
    <nameField>
        <displayFormat>REL-{000000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>